update: 更新Mapper为AllMapper