@@ -61,7 +61,7 @@ public class GenIdUtil {
                 LOCK.lock();
                 try {
                     if (!CACHE.containsKey(genClass)) {
-                        CACHE.put(genClass, genClass.newInstance());
+                        CACHE.put(genClass, genClass.getDeclaredConstructor().newInstance());
                     }
                     genId = CACHE.get(genClass);
                 } finally {
